5-security/http-auth/allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: sock-shop
spec:
 rules:
 - {}
